{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 23,
  "lineage": "59ac1369-af79-cd49-ab95-2a32331ebd4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:loadbalancer/app/uat-api-loadbalancer/bc781e2fa2e1e23e",
            "arn_suffix": "app/uat-api-loadbalancer/bc781e2fa2e1e23e",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "uat-api-loadbalancer-1897774527.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:loadbalancer/app/uat-api-loadbalancer/bc781e2fa2e1e23e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "uat-api-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06f895a8fc45e2ddb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d259508e51dd51c"
              },
              {
                "subnet_id": "subnet-06c9bb0119257060d"
              }
            ],
            "subnets": [
              "subnet-03d259508e51dd51c",
              "subnet-06c9bb0119257060d"
            ],
            "tags": {
              "Environment": "uat",
              "Name": "uat-api-loadbalancer",
              "Project": "extramile"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-api-loadbalancer",
              "Project": "extramile"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-012d83645192c8ce2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:listener/app/uat-api-loadbalancer/bc781e2fa2e1e23e/888bd9c9264ddcaf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:listener/app/uat-api-loadbalancer/bc781e2fa2e1e23e/888bd9c9264ddcaf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:loadbalancer/app/uat-api-loadbalancer/bc781e2fa2e1e23e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "uat",
              "Name": "uat-extramile-api-loadbalancer",
              "Project": "extramile"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-extramile-api-loadbalancer",
              "Project": "extramile"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:listener/app/uat-api-loadbalancer/bc781e2fa2e1e23e/90e90d9930b234f0",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:058264176381:certificate/e162ebfe-6ddc-4c1c-b9bd-f5109426b3dd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/html",
                    "message_body": "Access denied",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:listener/app/uat-api-loadbalancer/bc781e2fa2e1e23e/90e90d9930b234f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:loadbalancer/app/uat-api-loadbalancer/bc781e2fa2e1e23e",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "uat",
              "Name": "uat-extramile-api-loadbalancer",
              "Project": "extramile"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-extramile-api-loadbalancer",
              "Project": "extramile"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:targetgroup/extramile-uat-api/b7d3793a36afb7c4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:listener-rule/app/uat-api-loadbalancer/bc781e2fa2e1e23e/90e90d9930b234f0/7cd7c59ae627c7a1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api.stakevaultnet.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:listener-rule/app/uat-api-loadbalancer/bc781e2fa2e1e23e/90e90d9930b234f0/7cd7c59ae627c7a1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:listener/app/uat-api-loadbalancer/bc781e2fa2e1e23e/90e90d9930b234f0",
            "priority": 1,
            "tags": {
              "Environment": "uat",
              "Name": "uat-extramile-api-loadbalancer",
              "Project": "extramile"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-extramile-api-loadbalancer",
              "Project": "extramile"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_listener.frontend_https",
            "aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:targetgroup/extramile-uat-api/b7d3793a36afb7c4",
            "arn_suffix": "targetgroup/extramile-uat-api/b7d3793a36afb7c4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200,404",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:058264176381:targetgroup/extramile-uat-api/b7d3793a36afb7c4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "extramile-uat-api",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "Name": "extramile-uat-api",
              "Project": "extramile"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "extramile-uat-api",
              "Project": "extramile"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}